syntax = "proto3";

option java_multiple_files = true;
option java_package = "br.com.zup";
option java_outer_classname = "KeymanagerGrpc";

package br.com.zup;

import "google/protobuf/timestamp.proto";

/* CADASTRAR CHAVE PIX */
service CadastrarChavePix {
  rpc cadastrar (CadastrarChavePixRequest) returns (CadastrarChavePixResponse) {}
}

enum TipoChavePix {
  TIPO_CHAVE_PIX_NAO_DEFINIDO = 0;
  CPF = 1;
  CELULAR = 2;
  EMAIL = 3;
  ALEATORIA = 4;
}

enum TipoContaBancaria {
  TIPO_CONTA_NAO_DEFINIDO = 0;
  CONTA_CORRENTE = 1;
  CONTA_POUPANCA = 2;
}

message CadastrarChavePixRequest {
  string idClienteBancario  = 1;
  TipoChavePix tipoChavePix  = 2;
  string valorChavePix = 3;
  TipoContaBancaria tipoContaBancaria = 4;
}

message CadastrarChavePixResponse {
  string pixId = 1;
}

/* DELETAR CHAVE PIX */
service DeletarChavePix {
  rpc deletar (DeletarChavePixRequest) returns (DeletarChavePixResponse) {}
}

message DeletarChavePixRequest {
  string pixId = 1;
  string idClienteBancario  = 2;
}

message DeletarChavePixResponse {
  bool deletado = 1;
}

/* CONSULTAR CHAVE PIX via KeyManager*/
service ConsultarChavePix {
  rpc consultaPorPixIdAndIdClienteBancario (ConsultaPixIdAndIdClienteBancarioRequest) returns (ConsultarChavePixResponse) {}
  rpc consultaPorChavePix (ConsultaChavePixRequest) returns (ConsultarChavePixResponse) {}
}

message ConsultaPixIdAndIdClienteBancarioRequest {
  string pixId = 1;
  string idClienteBancario  = 2;
}

message ConsultarChavePixResponse {
  string pixId = 1;
  string idClienteBancario = 2;
  string tipoChavePix  = 3;
  string valorChavePix = 4;

  message Titular {
    string nome = 1;
    string cpf = 2;
  }
  Titular titular = 5;

  message ContaBancaria {
    string banco = 1;
    string agencia = 2;
    string numero = 3;
    string tipo = 4;
  }
  ContaBancaria contaBancaria = 6;
  google.protobuf.Timestamp criadoEm = 7;
}

message ConsultaChavePixRequest {
  string valorChavePix = 1;
}